--- a/README
+++ b/README
@@ -16,14 +16,14 @@ Prerequisites:
 
   4) PHP jpgraph library
 
-  5) (optional) the ability to run Perl scripts from the commandline for
-     maintenance tasks.
+  5) The ability to run Perl scripts from the commandline for
+     maintenance tasks.  The Perl DBI and DBD::mysql modules are required for
+     this.
 
   6) (optional) mod_rewrite is required if you want clean URLs
      (if you want http://your-server/leaguerunner/home instead of
       http://your-server/leaguerunner/index.php?q=/home)
 
-	 
 Once the prerequisites are installed and configured normally (nothing really
 special is needed for Leaguerunner), you can install the software.
 
@@ -33,7 +33,7 @@ To install Leaguerunner:
      is a good place to put it.  You can also run it from a user's public_html
      directory if you wish.
 
-  2) initialise the database.  First, you need to create it.  This can be done
+  2) create the database.  First, you need to create it.  This can be done
      by running: 
         mysql -uroot -p
      and logging in as the MySQL root user.  Once logged in, run the following
@@ -44,17 +44,17 @@ To install Leaguerunner:
      Be sure to choose an appropriate username instead of "leaguerunner_user"
      and a better password in place of "password".
 
-     Once this is done, you will need to import the database schema using:
-        mysql leaguerunner -u leaguerunner_user -p < db/mysql_fresh_install.sql
-
-     Each time, you  will be prompted for the password of "leaguerunner_user",
-     so enter the one you just used when creating it.
-
   3) Change into the directory in which you installed Leaguerunner, and edit
      the leaguerunner.conf file.  You will need to edit 
      $DB_URL to use the username and password you used when creating the
         database;
      $BASE_URL to set the base URL used to access Leaguerunner.
+
+  4) Run
+	perl/bin/db-init-or-upgrade.pl --action=install --config=/path/to/leaguerunner.conf
+
+     using the path to the leaguerunner.conf you just edited.  This will
+     install the necessary tables for Leaguerunner.
 
 Once this is complete, you should be able to point your web browser at the base
 URL and log in using the user 'admin' with a password of 'admin'.
