--- a/README
+++ b/README
@@ -34,7 +34,7 @@ To install Leaguerunner:
      directory if you wish.
 
   2) create the database.  First, you need to create it.  This can be done
-     by running: 
+     by running:
         mysql -uroot -p
      and logging in as the MySQL root user.  Once logged in, run the following
      SQL commands:
@@ -45,10 +45,12 @@ To install Leaguerunner:
      and a better password in place of "password".
 
   3) Change into the directory in which you installed Leaguerunner, and edit
-     the leaguerunner.conf file.  You will need to edit 
-     $DB_URL to use the username and password you used when creating the
-        database;
-     $BASE_URL to set the base URL used to access Leaguerunner.
+     the leaguerunner.conf file. You may need to create one anew by copying
+     leaguerunner.conf.example.  In this file, you should change, at minimum:
+
+      - dsn, username, and password values in the [database] section for database connections
+
+      - base_url in the [paths] section for the URL to use when accessing Leaguerunner.
 
   4) Run
 	perl/bin/db-init-or-upgrade.pl --action=install --config=/path/to/leaguerunner.conf
